@@ -18,9 +18,8 @@ $Id$
 import unittest
 import Testing
 
-from Products.Five import zcml
-
 from Products.GenericSetup.testing import BodyAdapterTestCase
+from Products.GenericSetup.testing import ExportImportZCMLLayer
 
 _FOLDER_BODY = """\
 <?xml version="1.0"?>
@@ -31,6 +30,8 @@ _FOLDER_BODY = """\
 
 
 class FolderXMLAdapterTests(BodyAdapterTestCase):
+
+    layer = ExportImportZCMLLayer
 
     def _getTargetClass(self):
         from Products.GenericSetup.OFSP.exportimport import FolderXMLAdapter
@@ -45,12 +46,9 @@ class FolderXMLAdapterTests(BodyAdapterTestCase):
         self.assertEqual(obj.title, 'Foo')
 
     def setUp(self):
-        import Products.GenericSetup.OFSP
         from OFS.Folder import Folder
 
         BodyAdapterTestCase.setUp(self)
-        zcml.load_config('configure.zcml', Products.GenericSetup.OFSP)
-
         self._obj = Folder('foo_folder')
         self._BODY = _FOLDER_BODY
 
@@ -61,4 +59,5 @@ def test_suite():
         ))
 
 if __name__ == '__main__':
-    unittest.main(defaultTest='test_suite')
+    from Products.GenericSetup.testing import run
+    run(test_suite())
