@@ -18,10 +18,8 @@ $Id$
 import unittest
 import Testing
 
-from Products.Five import zcml
-
 from Products.GenericSetup.testing import BodyAdapterTestCase
-
+from Products.GenericSetup.testing import ExportImportZCMLLayer
 
 _PYTHONSCRIPT_BODY = """\
 ## Script (Python) "foo_script"
@@ -38,6 +36,8 @@ _PYTHONSCRIPT_BODY = """\
 
 class PythonScriptBodyAdapterTests(BodyAdapterTestCase):
 
+    layer = ExportImportZCMLLayer
+
     def _getTargetClass(self):
         from Products.GenericSetup.PythonScripts.exportimport \
                 import PythonScriptBodyAdapter
@@ -45,13 +45,9 @@ class PythonScriptBodyAdapterTests(BodyAdapterTestCase):
         return PythonScriptBodyAdapter
 
     def setUp(self):
-        import Products.GenericSetup.PythonScripts
         from Products.PythonScripts.PythonScript import PythonScript
 
         BodyAdapterTestCase.setUp(self)
-        zcml.load_config('configure.zcml',
-                         Products.GenericSetup.PythonScripts)
-
         self._obj = PythonScript('foo_script')
         self._BODY = _PYTHONSCRIPT_BODY
 
@@ -62,4 +58,5 @@ def test_suite():
         ))
 
 if __name__ == '__main__':
-    unittest.main(defaultTest='test_suite')
+    from Products.GenericSetup.testing import run
+    run(test_suite())
